2006-10-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/pic16/glue.c (pic16emitMaps),
	* src/pic/glue.c (pic14emitMaps): hopefully fixed bug 1568779

2006-09-30 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* support/librarian/sdcclib.c: Added option -l.
	* as/link/mcs51/lkmem.c: don't use absolute segments to compute memory
	  usage totals.
	* device/lib/make51lib.bat: added.  Allows building mcs51 libraries easily
	  using Windows command prompt.

2006-09-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/libsdcc.lib: added module rand
	* src/ds390/ralloc.c (rematStr),
	* src/hc08/ralloc.c (rematStr),
	* src/mcs51/ralloc.c (rematStr),
	* src/z80/ralloc.c (rematStr): made output more consistent
	* src/mcs51/gen.c: cosmetic changes

2006-09-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/port.h: added mem.cabs_name to PORT
	* src/ds390/main.c,
	* src/hc08/main.c,
	* src/mcs51/main.c,
	* src/pic16/main.c,
	* src/pic/main.c,
	* src/xa51/main.c,
	* src/z80/main.c: added cabs_name initializers
	* src/SDCCglue.c (emitStaticSeg): allocate and initialize absolute
	  constants
	  (emitMaps): emit absolutes in code memory into cabs_name
	* src/SDCCmem.c,
	* src/SDCCmem.h: added memory map c_abs and defined CABS_NAME
	* src/ds390/gen.c (genCodePointerGet): fixed bug if left is a literal
	* support/regression/fwk/include/testfwk.h: added define for at
	* support/regression/tests/absolute.c: added, new

2006-09-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genPlusIncr, genMinusDec, genAddrOf): small
	  optimizations, see also patch 887161 by Stas Sergeev
	* src/mcs51/peeph.def(104, 207, 209, 212): disabled as they do not seem
	  to be necessary anymore,
	  (102, 103, 104, 127): renamed all occurances of bp to _bp

2006-09-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/at89c51snd1c.h: fixed MSK_SREQ definition
	  thanks Weston T. Schmidt for patch 1555221